fix: correction in table.scc spacing variavble

--- a/src/components/Table/Table.scss
+++ b/src/components/Table/Table.scss
@@ -1,8 +1,8 @@
 @import '../../styles/foundation/colors.scss';
 
 $table-vertical-spacing: spacing(base);
-$table-horizontal-spacing: spacing(tighter);
-$table-vertical-head-spacing: spacing(tight);
+$table-horizontal-spacing: spacing(tightest);
+$table-vertical-head-spacing: spacing(tightergit);
 
 $color-grey-dark: color(ink, base);
 $color-grey-base: color(sky, base);
